lay du lieu tu db len

--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-    <h1>Trịnh Hương là đàn ông </h1>
+    <h1>My Home Page </h1>
+    <p>
+        <%=data%>
+    </p>
 </body>
 
 </html>
