--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         table,
         th,
@@ -21,6 +24,8 @@
             <th>Firstname</th>
             <th>Lastname</th>
             <th>Address</th>
+            <th>Action</th>
+
         </tr>
         <tr>
             <% for(var i=0; i < dataTable.length; i++) { %>
@@ -36,6 +41,11 @@
             </td>
             <td>
                 <%= dataTable[i].address %>
+            </td>
+            <td>
+                <a href="/edit-crud?id=<%=dataTable[i].id%>" class="btn btn-primary">Edit</a>
+                <a class="btn btn-danger">Delete</a>
+
             </td>
         </tr>
         <% } %>
